Graph / Adjacency List redefinition