@@ -8,154 +8,201 @@ import java.util.*;
 /**
  * Graph implementation using an adjacency list.
  *
- * @param <TKey>  The type of the key that identifies a node.
- * @param <TNode> The type of the nodes.
+ * @param <TKey>    The type of the key that identifies a vertex.
+ * @param <TVertex> The type of the vertices.
  */
-public class AdjacencyListGraph<TKey, TNode> {
+public class AdjacencyListGraph<TKey, TVertex> {
     /**
-     * Item in the linked list of adjacent nodes of a source node
+     * Stores a vertex
      *
-     * @param key     The key that identifies the adjacent node
-     * @param node    The actual node value
-     * @param weight  The weight of the edge (Optional)
-     * @param <TKey>  The type of the key
-     * @param <TNode> The type of the node
+     * @param <TKey>
+     * @param <TVertex>
      */
-    public record AdjacencyListItem<TKey, TNode>(TKey key, TNode node, double weight) {
-        public AdjacencyListItem(TKey key, TNode node) {
-            this(key, node, 0);
+    public static class VertexEntry<TKey, TVertex> {
+        public TKey key;
+        public TVertex vertex;
+
+        public VertexEntry(TKey key, TVertex vertex) {
+            this.key = key;
+            this.vertex = vertex;
         }
     }
 
     /**
-     * The actual adjacency list represented as key-value pairs of node keys and linked lists of adjacent nodes.
+     * Array list the vertex entries
      */
-    private final TreeMap<TKey, LinkedList<AdjacencyListItem<TKey, TNode>>> lists;
-
-    public AdjacencyListGraph(TreeMap<TKey, LinkedList<AdjacencyListItem<TKey, TNode>>> lists) {
-        this.lists = lists;
-    }
+    private final ArrayList<VertexEntry<TKey, TVertex>> entries;
 
     /**
-     * Contract for a DFS implementation strategy
+     * The count of distinct edges
      */
-    public interface DFSStrategy<TKey, TNode> {
-        LinkedList<TKey> run(
-                TreeMap<TKey, LinkedList<AdjacencyListItem<TKey, TNode>>> lists,
-                TKey source,
-                Set<TKey> visited,
-                LinkedList<TKey> nodes
-        );
-    }
+    private final int size;
 
     /**
-     * Recursive implementation of the DFS traversal
+     * Key-Value pairs of vertex keys and the indices of the corresponding vertices inside the entries
      */
-    public static class RecursiveDFS<TKey, TNode> implements DFSStrategy<TKey, TNode> {
-        @Override
-        public LinkedList<TKey> run(
-                TreeMap<TKey, LinkedList<AdjacencyListItem<TKey, TNode>>> lists,
-                TKey source,
-                Set<TKey> visited,
-                LinkedList<TKey> nodes
-        ) {
-            visited.add(source);
-            nodes.add(source);
+    private final TreeMap<TKey, Integer> keysIndices;
 
-            LinkedList<AdjacencyListItem<TKey, TNode>> adjNodes = lists.get(source);
-            if (adjNodes != null) {
-                for (AdjacencyListItem<TKey, TNode> item : adjNodes) {
-                    if (visited.contains(item.key)) continue;
-                    run(lists, item.key, visited, nodes);
-                }
-            }
+    /**
+     * Refers to an edge inside the adjacency list
+     */
+    private static class ListEdge {
+        /**
+         * The index of the destination vertex inside the vertex entries
+         */
+        public int index;
 
-            return nodes;
+        /**
+         * The weight of the edge
+         */
+        public double weight;
+
+        public ListEdge(int index, double weight) {
+            this.index = index;
+            this.weight = weight;
         }
     }
 
     /**
-     * Iterative DFS traversal
+     * The actual adjacency list
      */
-    public static class IterativeDFS<TKey, TNode> implements DFSStrategy<TKey, TNode> {
-        @Override
-        public LinkedList<TKey> run(
-                TreeMap<TKey, LinkedList<AdjacencyListItem<TKey, TNode>>> lists,
-                TKey source,
-                Set<TKey> visited,
-                LinkedList<TKey> nodes
-        ) {
-            LinkedListStack<TKey> toTraverse = new LinkedListStack<>();
+    private final ArrayList<LinkedList<ListEdge>> lists;
 
-            toTraverse.push(source);
+    public AdjacencyListGraph(List<VertexEntry<TKey, TVertex>> entries) {
+        this.entries = new ArrayList<>(entries);
+        size = this.entries.size();
+        keysIndices = new TreeMap<>();
+        lists = new ArrayList<>();
 
-            while (!toTraverse.isEmpty()) {
-                TKey current = toTraverse.pop();
-
-                if (!visited.contains(current)) {
-                    visited.add(current);
-                    nodes.add(current);
-                }
-
-                LinkedList<AdjacencyListItem<TKey, TNode>> adjNodes = lists.get(current);
-                if (adjNodes != null) {
-                    ListIterator<AdjacencyListItem<TKey, TNode>> itemsIterator = adjNodes.listIterator(adjNodes.size());
-                    while (itemsIterator.hasPrevious()) {
-                        AdjacencyListItem<TKey, TNode> item = itemsIterator.previous();
-                        if (visited.contains(item.key)) continue;
-                        toTraverse.push(item.key);
-                    }
-                }
-            }
-
-            return nodes;
+        for (int i = 0; i < size; i++) {
+            keysIndices.put(this.entries.get(i).key, i);
+            lists.add(new LinkedList<>());
         }
     }
 
-    public LinkedList<TKey> DFS(TKey source, DFSStrategy<TKey, TNode> dfsStrategy) {
-        return dfsStrategy.run(lists, source, new TreeSet<>(), new LinkedList<>());
+    /**
+     * Refers to an edge that is specified when building the graph
+     *
+     * @param key    The key of the destination vertex
+     * @param weight The weight of the edge
+     * @param <TKey> The type of the key
+     */
+    public record BuilderEdge<TKey>(TKey key, double weight) {
+        public BuilderEdge(TKey key) {
+            this(key, 0);
+        }
     }
 
-    public LinkedList<TKey> BFS(TKey source) {
-        LinkedList<TKey> nodes = new LinkedList<>();
-        Set<TKey> visited = new TreeSet<>();
-        LinkedListQueue<TKey> toTraverse = new LinkedListQueue<>();
+    /**
+     * Adds adjacent edges from a source vertex in the list
+     *
+     * @param source The key of the source vertex
+     * @param edges  The list of adjacent edges
+     * @return The reference to the graph instance
+     */
+    public AdjacencyListGraph<TKey, TVertex> addEdgesFromVertex(TKey source, List<BuilderEdge<TKey>> edges) {
+        int sourceIndex = keysIndices.get(source), destIndex;
+        for (BuilderEdge<TKey> edge : edges) {
+            destIndex = keysIndices.get(edge.key);
+            lists.get(sourceIndex).add(new ListEdge(destIndex, edge.weight));
+        }
+        return this;
+    }
 
+    private LinkedList<VertexEntry<TKey, TVertex>> recursiveDFS(
+            int source,
+            TreeSet<Integer> visited,
+            LinkedList<VertexEntry<TKey, TVertex>> visitedEntries
+    ) {
         visited.add(source);
-        nodes.add(source);
+        visitedEntries.add(entries.get(source));
+
+        for (ListEdge edge : lists.get(source)) {
+            if (visited.contains(edge.index)) continue;
+            recursiveDFS(edge.index, visited, visitedEntries);
+        }
+
+        return visitedEntries;
+    }
+
+    public LinkedList<VertexEntry<TKey, TVertex>> recursiveDFS(TKey source) {
+        return recursiveDFS(keysIndices.get(source), new TreeSet<>(), new LinkedList<>());
+    }
+
+    public LinkedList<VertexEntry<TKey, TVertex>> iterativeDFS(TKey sourceKey) {
+        int source = keysIndices.get(sourceKey), current;
+
+        LinkedList<VertexEntry<TKey, TVertex>> visitedVertices = new LinkedList<>();
+        TreeSet<Integer> visited = new TreeSet<>();
+        LinkedListStack<Integer> toTraverse = new LinkedListStack<>();
+
+        toTraverse.push(source);
+
+        while (!toTraverse.isEmpty()) {
+            current = toTraverse.pop();
+
+            if (visited.contains(current)) continue;
+
+            visitedVertices.add(entries.get(current));
+            visited.add(current);
+
+            LinkedList<ListEdge> adjEdges = lists.get(current);
+            ListIterator<ListEdge> adjEdgesIterator = adjEdges.listIterator(adjEdges.size());
+            while (adjEdgesIterator.hasPrevious()) {
+                ListEdge edge = adjEdgesIterator.previous();
+                if (visited.contains(edge.index)) continue;
+                toTraverse.push(edge.index);
+            }
+        }
+
+        return visitedVertices;
+    }
+
+    public LinkedList<VertexEntry<TKey, TVertex>> BFS(TKey sourceKey) {
+        int source = keysIndices.get(sourceKey), current;
+
+        LinkedList<VertexEntry<TKey, TVertex>> visitedEntries = new LinkedList<>();
+        TreeSet<Integer> visited = new TreeSet<>();
+        LinkedListQueue<Integer> toTraverse = new LinkedListQueue<>();
+
+        visitedEntries.add(entries.get(source));
+        visited.add(source);
         toTraverse.enqueue(source);
 
         while (!toTraverse.isEmpty()) {
-            TKey current = toTraverse.dequeue();
-            LinkedList<AdjacencyListItem<TKey, TNode>> adjNodes = lists.get(current);
-            if (adjNodes != null) {
-                for (AdjacencyListItem<TKey, TNode> item : adjNodes) {
-                    if (visited.contains(item.key)) continue;
-                    visited.add(item.key);
-                    nodes.add(item.key);
-                    toTraverse.enqueue(item.key);
-                }
+            current = toTraverse.dequeue();
+
+            for (ListEdge edge : lists.get(current)) {
+                if (visited.contains(edge.index)) continue;
+                visitedEntries.add(entries.get(edge.index));
+                visited.add(edge.index);
+                toTraverse.enqueue(edge.index);
             }
         }
 
-        return nodes;
+        return visitedEntries;
     }
 
     @Override
     public String toString() {
-        StringBuilder output = new StringBuilder();
-        int n = lists.size() - 1, i = 0;
-        for (Map.Entry<TKey, LinkedList<AdjacencyListItem<TKey, TNode>>> entry : lists.entrySet()) {
-            output.append(entry.getKey()).append(" : ");
-            int count = entry.getValue().size() - 1, j = 0;
-            for (AdjacencyListItem<TKey, TNode> item : entry.getValue()) {
-                output.append(item.key);
-                if (item.weight != 0) output.append("(%.2f)".formatted(item.weight));
-                output.append(j < count ? " -> " : i < n ? "\n" : "");
+        StringBuilder builder = new StringBuilder();
+
+        for (int i = 0; i < size; i++) {
+            if (i > 0) builder.append("\n");
+            builder.append(entries.get(i).key).append(" : ");
+            int edgesCount = lists.get(i).size(), j = 0;
+            for (ListEdge edge : lists.get(i)) {
+                builder.append(entries.get(edge.index).key);
+                if (edge.weight != 0) {
+                    int weightPrecision = 2;
+                    String format = " %." + weightPrecision + "f";
+                    builder.append(" (").append(String.format(format, edge.weight)).append(")");
+                }
+                if (j < edgesCount - 1) builder.append(" -> ");
                 j++;
             }
-            i++;
         }
-        return output.toString();
+
+        return builder.toString();
     }
 }
